# Char-Benchmarks

./: CharBenchmark.cabal  Char_Bench.cabal  Char_Bench.hs  Fitch128.hs  README.md
c-code/: simd.c
