cabal-version:      3.0
category:           Benchmarks
build-type:         Simple
name:               CharBenchmark
synopsis:           Testing performance of character encodings
version:            0.1.0

executable CharBenchmark
--  c-sources: simd.c
--
--  include-dirs: c-code

  main-is:
    Char_Bench.hs

  ghc-options:
    -threaded
    -rtsopts
    -O2
    -fobject-code
    -with-rtsopts=-T
    -optc-O3
    -optc-ffast-math
    -fspecialize-aggressively
    -Wall

  hs-source-dirs:
    .

  build-depends:
      base
    , criterion
    , vector
        ^>= 0.12.1.2

  default-language:
    Haskell2010
